--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -1,9 +1,12 @@
 <nav>
     <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Sobre mí</a></li>
-        <li><a href="#">Estudios</a></li>
-        <li><a href="#">Tecnologías</a></li>
-        <li><a href="#">Proyectos</a></li>
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/about">Sobre mí</a></li>
+        <li><a href="/studies">Estudios</a></li>
+        <li><a href="/techs">Tecnologías</a></li>
+        <li><a href="/projects">Mis proyectos</a></li>        
+    </ul>
+    <ul>
+        <li><a href="/admin/projects">Administrar Proyectos</a></li>
     </ul>
 </nav>
