--- a/views/portfolio/home.ejs
+++ b/views/portfolio/home.ejs
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio | Mathias Cianni</title>
-</head>
-<body>
-    <%- include('../common/navbar') %>
-</body>
-</html>
+<%- include('../common/htmlTop', { title: "Inicio" }) %>
+    <h1>Inicio</h1>
+<%- include('../common/htmlBot') %>
