--- a/views/common/htmlTop.ejs
+++ b/views/common/htmlTop.ejs
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> | Mathias Cianni</title>
+    <link rel="stylesheet" href="/styles/tailwind.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
     <%- include('./navbar') %>
-        <main>
+        <main class="container mx-auto">
