--- a/views/portfolio/home.ejs
+++ b/views/portfolio/home.ejs
@@ -1,3 +1,3 @@
 <%- include('../common/htmlTop', { title: "Inicio" }) %>
-    <h1>Inicio</h1>
+    <h1 class="text-sky-500">Inicio</h1>
 <%- include('../common/htmlBot') %>
