--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,3 +1,19 @@
-<footer>
-    ©2022
+<footer class="p-4 bg-white bg-gray-800">
+    <div class="container mx-auto md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800">
+        <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2022 <a href="https://www.linkedin.com/in/mathias-cianni-92a727195/" class="hover:underline" target="_blank">Mathias Cianni</a>. Escuela da Vinci.</span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm text-white dark:text-gray-400 sm:mt-0">
+            <li>
+                <p class="mr-4 md:mr-6 ">Aplicaciones híbridas</p>
+            </li>
+            <li>
+                <p class="mr-4 md:mr-6 ">Brian Lara</p>
+            </li>
+            <li>
+                <a href="https://github.com/mathiascianni" class="mr-4 md:mr-6 text-3xl" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/mathias-cianni-92a727195/" class="mr-4 md:mr-6 text-3xl" target="_blank"><i class="fa-brands fa-linkedin-in"></i></i></a>
+            </li>
+        </ul>
+    </div>
 </footer>
