--- a/views/portfolio/about.ejs
+++ b/views/portfolio/about.ejs
@@ -1,3 +1,8 @@
 <%- include('../common/htmlTop', { title: "Sobre mí" }) %>
-    <h1>About</h1>
+    <h1 class="font-bold text-xl mb-8">Sobre mí</h1>
+    <div>
+        <p class='mb-4'>Vivo en Buenos Aires, Argentina y llevo estudiando desarrollo frontend hace 3 años.</p>
+        <p class='mb-4'>Me encanta la programación y los videojuegos. Comencé a programar por hobby hace algunos años; hacía videojuegos (aunque eran sólo demos) en Unity y GameMaker. Luego me expandí al área del desarrollo web y descubrí que era algo que me apasionaba. Comencé mis estudios en Crehana y al ver que todavía tenía mucho por aprender comencé la carrera de Desarrollo web en Escuela Da Vinci.</p>
+        <p class='mb-4'>Actualmente disfruto mucho el crear soluciones web atractivas y el proceso de aprendizaje que eso conlleva.</p>
+    </div>
 <%- include('../common/htmlBot') %>
