--- a/views/portfolio/home.ejs
+++ b/views/portfolio/home.ejs
@@ -1,3 +1,7 @@
 <%- include('../common/htmlTop', { title: "Inicio" }) %>
-    <h1 class="text-sky-500">Inicio</h1>
+    <div class="text-center flex flex-col content-center justify-center justify-self-center">
+        <p>Hola!</p>
+        <h1 class="font-bold text-xl">Soy <span class="text-orange-500">Mathias</span> Cianni</h1>
+        <p>Desarrollador FrontEnd</p>
+    </div>
 <%- include('../common/htmlBot') %>
