--- a/views/projects/admin/deleteProject.ejs
+++ b/views/projects/admin/deleteProject.ejs
@@ -1,7 +1,9 @@
 <%- include('../../common/htmlTop', { title: "Eliminar proyecto" }) %>
-    <h1>¿Estás seguro que querés eliminar el proyecto: <%= project.name %>
-    </h1>
-    <form action="/admin/projects/<%= project._id %>/delete" method="post">
-        <button type="submit">Sí, eliminar</button>
-    </form>
+    <h1 class="font-bold text-xl mb-8">¿Estás seguro que querés eliminar el proyecto: <%= project.name %></h1>
+    <div class="flex">
+        <a href="/admin/projects"  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">No, volver</a>
+        <form action="/admin/projects/<%= project._id %>/delete" method="post">
+            <button type="submit" class="text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Sí, eliminar</button>
+        </form>
+    </div>
 <%- include('../../common/htmlBot') %>
