--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -1,20 +1,20 @@
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+<nav class="bg-gray-800 border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-900 mb-8">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
-        <a href="#" class="flex items-center">Mathias Cianni</a>
-        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <a href="/" class="flex items-center text-white text-xl hover:text-orange-500 transition-all">Mathias Cianni</a>
+        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Abrir menú de navegación</span>
             <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
         </button>
         <div class="hidden w-full md:flex md:w-auto gap-x-8" id="navbar-default">
-            <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li><a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Inicio</a></li>
-                <li><a href="/about" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Sobre mí</a></li>
-                <li><a href="/studies" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Estudios</a></li>
-                <li><a href="/techs" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tecnologías</a></li>
-                <li><a href="/projects" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Mis proyectos</a></li>
+            <ul class="flex flex-col p-4 mt-4 border border-white md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 dark:bg-white md:dark:bg-white dark:border-white">
+                <li><a href="/" id="home" class="block py-2 pr-4 pl-3 text-white bg-blue-700 md:bg-transparent md:text-orange-500 transition-all md:p-0 dark:text-white" aria-current="page">Inicio</a></li>
+                <li><a href="/about" id="about" class="block py-2 pr-4 pl-3 text-white hover:bg-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 transition-all md:p-0 dark:text-white md:dark:hover:text-white dark:hover:bg-white dark:hover:text-white md:dark:hover:bg-transparent">Sobre mí</a></li>
+                <li><a href="/studies" id="studies" class="block py-2 pr-4 pl-3 text-white hover:bg-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 transition-all md:p-0 dark:text-white md:dark:hover:text-white dark:hover:bg-white dark:hover:text-white md:dark:hover:bg-transparent">Estudios</a></li>
+                <li><a href="/techs" id="techs" class="block py-2 pr-4 pl-3 text-white hover:bg-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 transition-all md:p-0 dark:text-white md:dark:hover:text-white dark:hover:bg-white dark:hover:text-white md:dark:hover:bg-transparent">Tecnologías</a></li>
+                <li><a href="/projects" id="projects" class="block py-2 pr-4 pl-3 text-white hover:bg-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 transition-all md:p-0 dark:text-white md:dark:hover:text-white dark:hover:bg-white dark:hover:text-white md:dark:hover:bg-transparent">Mis proyectos</a></li>
             </ul>
-            <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li><a href="/admin/projects" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Administrar Proyectos</a></li>
+            <ul class="flex flex-col p-4 mt-4 border border-white md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 dark:bg-white md:dark:bg-white dark:border-white">
+                <li><a href="/admin/projects" class="block py-2 pr-4 pl-3 text-white  hover:bg-white md:hover:bg-transparent md:border-0 md:hover:text-orange-500 transition-all md:p-0 dark:text-white md:dark:hover:text-white dark:hover:bg-white dark:hover:text-white md:dark:hover:bg-transparent">Administrar Proyectos</a></li>
             </ul>
         </div>
     </div>
