--- a/views/common/success.ejs
+++ b/views/common/success.ejs
@@ -1,4 +1,5 @@
 <%- include('../common/htmlTop', { title: "La acción se realizó con éxito" }) %>
-    <h1>¡La acción se realizó con éxito!</h1>
-    <p><%- message %></p>
+    <h1 class="font-bold text-xl mb-8 text-green-600">¡La acción se realizó con éxito! <i class="fa-solid fa-circle-check"></i></h1>
+    <p class="mb-8"><%- message %></p>
+    <a href=<%= redirect %> class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 max-w-max"><%= btnText %></a>
 <%- include('../common/htmlBot') %>
