--- a/views/projects/admin/adminProjectList.ejs
+++ b/views/projects/admin/adminProjectList.ejs
@@ -1,14 +1,14 @@
 <tr class="bg-white border-b">
-    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><img src="public/img/<%= project.img %>.jpg" alt="Miniatura del proyecto: <%= project.name %>" /></td>
-    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"><%= project.name %></td>
+    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><img src="<%= project.img %>" alt="Miniatura del proyecto: <%= project.name %>" /></td>
+    <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-900"><%= project.name %></td>
     <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><%= project.description %></td>
-    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="<%= project.link %>" target="_blank"><%= project.link %></td>
+    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="<%= project.link %>" target="_blank" class="underline text-blue-600 hover:text-blue-800"><%= project.link %></td>
     <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
         <form action="/admin/projects/<%= project._id %>/publish" method="post">
             <input type="hidden" value="<%= project.public %>" name="publish">
-            <button type="submit" class="bg-gray-700 text-white px-2 py-1"><%= project.public? "Público" : "Privado" %></button>
+            <button type="submit" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"><%- project.public? "<i class='fa-solid fa-eye'></i> Público" : "<i class='fa-solid fa-eye-slash'></i> Privado" %></button>
         </form>
     </td>
-    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="/admin/projects/<%= project._id %>/edit" class="text-cyan-500">Editar</a></td>
-    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="/admin/projects/<%= project._id %>/delete" class="text-red-600">Eliminar</a></td>
+    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="/admin/projects/<%= project._id %>/edit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Editar</a></td>
+    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"><a href="/admin/projects/<%= project._id %>/delete" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Eliminar</a></td>
 </tr>
